# Hemera

./: .gitignore  .gitmodules  LICENSE  README.md
apps/bootstrap_compiler/: CMakeLists.txt  README.md  generate-project.bat  generate-project.sh
apps/bootstrap_compiler/include/: job.h  version.h
apps/bootstrap_compiler/include/cmd_line/: arg_parsing.h  argument.h  options.h
apps/bootstrap_compiler/include/error/: error.h  errors.list  reporting.h  warning.h
apps/bootstrap_compiler/include/front_end/: front_end.h  function.h  hlir.h  hlir_generation.h  identifier.h  info.h  type.h  type_checking.h  type_id.h  type_info.h  work.h
apps/bootstrap_compiler/include/lexer/: lexer.h  token.h
apps/bootstrap_compiler/include/memory/: allocator.h  thread_safe_queue.h
apps/bootstrap_compiler/include/parser/: ast_types.h  parser.h
apps/bootstrap_compiler/include/util/: logger.h  thread_pool.h
apps/bootstrap_compiler/src/: CMakeLists.txt  main.cpp
apps/bootstrap_compiler/src/cmd_line/: arg_parsing.cpp  options.cpp
apps/bootstrap_compiler/src/error/: generate_errors.cpp  reporting.cpp
apps/bootstrap_compiler/src/front_end/: front_end.cpp  hlir.cpp  hlir_generation.cpp  info.cpp  type.cpp  type_checking.cpp  work.cpp
apps/bootstrap_compiler/src/lexer/: lexer.cpp  token.cpp
apps/bootstrap_compiler/src/memory/: allocator.cpp
apps/bootstrap_compiler/src/parser/: ast_types.cpp  parser.cpp
apps/bootstrap_compiler/src/util/: logger.cpp  thread_pool.cpp
apps/bootstrap_compiler/test/: main.cpp
apps/bootstrap_compiler/test/front_end/: hlir_test.cpp
apps/bootstrap_compiler/test/lexer/: lexer_test.cpp
apps/bootstrap_compiler/test/parser/: parser_test.cpp  smoke_test.hsc
apps/bootstrap_compiler/test/parser/error_scenarios/: E3001_01.hsc  E3004_01.hsc  E3006_01.hsc  E3007_01.hsc  E3009_01.hsc  E3009_02.hsc  E3009_04.hsc  E3009_05.hsc  E3009_06.hsc  E3009_10.hsc  E3009_11.hsc  E3009_12.hsc  E3010_01.hsc  E3011_01.hsc  E3012_03.hsc  E3012_04.hsc  E3014_01.hsc  E3014_03.hsc  E3015_01.hsc  E3015_03.hsc  E3015_04.hsc  E3015_06.hsc  E3015_07.hsc  E3015_08.hsc  E3015_09.hsc  E3015_10.hsc  E3016_01.hsc  E3016_02.hsc  E3017_01.hsc  E3017_02.hsc  E3017_03.hsc  E3017_05.hsc  E3017_06.hsc  E3017_07.hsc  E3017_08.hsc  E3018_03.hsc  E3018_04.hsc  E3018_05.hsc  E3019_01.hsc  E3019_03.hsc  (+11 more)
apps/compiler/: .clang-tidy  CMakeLists.txt  README.md  obliterate_and_recreate_bin.sh
apps/compiler/include/: job.h
apps/compiler/include/back_end/: back_end.h
apps/compiler/include/cmd_line/: arg_parsing.h  cmd_line_utils.h  options.h
apps/compiler/include/error/: errors.list  errors_template.h  warnings.list  warnings_template.h
apps/compiler/include/front_end/: event.h  front_end.h  hlir.h  hlir_generation.h  info.h  mlir.h  mlir_generation.h  type.h  type_checking.h  type_id.h  work.h
apps/compiler/include/lexer/: lexer.h
apps/compiler/include/parser/: ast_types.h  parser.h
apps/compiler/include/types/: primitives.h
apps/compiler/include/util/: logger.h
apps/compiler/mlir/: CMakeLists.txt
apps/compiler/mlir/include/hmir/: CMakeLists.txt  hmir_dialect.h  hmir_dialect.td  hmir_ops.h  hmir_ops.td  hmir_passes.h  hmir_passes.td
apps/compiler/mlir/lib/hmir/: CMakeLists.txt  hmir_dialect.cpp  hmir_passes.cpp
apps/compiler/mlir/lib/hmir/ir/: hmir_ops.cpp
apps/compiler/src/: CMakeLists.txt  main.cpp
apps/compiler/src/back_end/: llvm.cpp
apps/compiler/src/cmd_line/: arg_parsing.cpp  cmd_line_utils.cpp  options.cpp
apps/compiler/src/error/: generate_errors.cpp
apps/compiler/src/front_end/: front_end.cpp  hlir_generation.cpp  info.cpp  mlir_generation.cpp  type.cpp  type_checking.cpp  work.cpp
apps/compiler/src/lexer/: lexer.cpp
apps/compiler/src/parser/: ast_types.cpp  parser.cpp
apps/compiler/src/util/: logger.cpp  thread_pool.cpp
apps/compiler/test/cmd_line/: arg_parsing_test.cpp
apps/compiler/test/lexer/: lexer_test.cpp
apps/compiler/test/parser/: parser_test.cpp  smoke_test.hsc
apps/compiler/test/parser/error_scenarios/: E3003_01.hsc  E3005_01.hsc  E3009_03.hsc  E3009_07.hsc  E3009_08.hsc  E3009_09.hsc  E3010_02.hsc  E3012_01.hsc  E3012_02.hsc  E3014_02.hsc  E3015_02.hsc  E3015_05.hsc  E3017_01.hsc  E3017_04.hsc  E3018_01.hsc  E3018_02.hsc  E3018_06.hsc  E3018_07.hsc  E3018_08.hsc  E3018_09.hsc  E3019_02.hsc  E3019_06.hsc  E3019_07.hsc  E3022_02.hsc  E3022_03.hsc  E3022_04.hsc  E3023_01.hsc  E3024_01.hsc  E3025_01.hsc  E3026_01.hsc  E3028_01.hsc  E3028_02.hsc
base/: builtin.hsc
base/builtin/: builtin.hsc  constants.hsc
base/compiler/: build.hsc  function.hsc  target.hsc  types.hsc
base/intrinsics/: intrinsics.hsc
base/runtime/: alloc.hsc  array.hsc  context.hsc  core.hsc  logger.hsc  thread.hsc
docs/: about.md  calling_convention.md  coding_guidelines.md  compilation.md  control_flow.md  directives.md  faq.md  formatting.md  functions.md  grammar.txt  hlir.md  keywords.md  memory.md  operators.md  packages.md  types.md
examples/feature_overview/: types.hsc
examples/hello_world/: hello_world.hsc
std/atomic/: atomic.hsc
std/compiler/: build.hsc
std/concurrency/: future.hsc
std/fiber/: fiber.hsc  fiber_queue.hsc  scheduler.hsc
std/formatting/: string.hsc
std/io/: stdout.hsc
std/logger/: default_logger.hsc  default_logger_data.hsc  default_logger_flags.hsc
std/memory/: alloc.hsc  option.hsc  optional.hsc  result.hsc  shared_ptr.hsc
std/os/: os.hsc
std/reflection/: reflection.hsc
std/string/: string_builder.hsc  string_conversion.hsc  string_utils.hsc
std/time/: time.hsc
