# Hemera compiler

# CMake settings

CMAKE_MINIMUM_REQUIRED(VERSION 3.20.0...4.3.3)

PROJECT(Hemera VERSION 1.0.0) # Decoupled from actual version, which are tracked in source

SET(CMAKE_CXX_STANDARD 20 CACHE STRING "C++ standard to conform to" FORCE)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_C_STANDARD 99)

ENABLE_LANGUAGE(CXX)
ENABLE_LANGUAGE(ASM)
ENABLE_LANGUAGE(ASM_MASM)

IF(POLICY CMP0091)
    CMAKE_POLICY(SET CMP0091 NEW) # CMAKE_MSVC_RUNTIME_LIBRARY
ENDIF()

IF(POLICY CMP0194)
    CMAKE_POLICY(SET CMP0194 NEW) # Ignore the MSVC cl for ASM
ENDIF()

IF(POLICY CMP0068)
  CMAKE_POLICY(SET CMP0068 NEW)
  SET(CMAKE_BUILD_WITH_INSTALL_NAME_DIR ON)
ENDIF()

IF(POLICY CMP0075)
  CMAKE_POLICY(SET CMP0075 NEW)
ENDIF()

IF(POLICY CMP0077)
  CMAKE_POLICY(SET CMP0077 NEW)
ENDIF()

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON) # Use solution folders.

# Operating system settings

IF(WIN32)
  SET(HEMERA_DEFINITIONS "${HEMERA_DEFINITIONS};-DWIN32_LEAN_AND_MEAN;-DNOMINMAX")
ELSEIF(UNIX)

ENDIF()

# Compiler settings

IF (MSVC)
  STRING(REPLACE "/EHsc" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
  STRING(REPLACE "/GR" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
ENDIF()

IF ((CMAKE_C_COMPILER_ID MATCHES "GNU") AND NOT MINGW AND NOT HAIKU)
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wall")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-pedantic")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wextra")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wcast-align")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wcast-qual")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wctor-dtor-privacy")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wdisabled-optimization")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wformat=2")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Winit-self")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wlogical-op")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wmissing-declarations")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wmissing-include-dirs")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wnoexcept")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wold-style-cast")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Woverloaded-virtual")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wredundant-decls")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wshadow")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wsign-conversion")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wsign-promo")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wstrict-null-sentinel")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wstrict-overflow=5")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wswitch-default")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wundef")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-unused")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Werror")

  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS};-fsanitize=undefined,shift,shift-exponent,integer-divide-by-zero,unreachable,vla-bound,null,return,signed-integer-overflow,bounds,float-divide-by-zero,float-cast-overflow,nonnull-attribute,returns-nonnull-attribute,bool,enum,vptr,pointer-overflow,builtin")
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS};-fno-sanitize-recover=all")
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS};-fno-exceptions")
  
ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS}$<$<CONFIG:>:;/MT>;")       # link with multithreaded, static version of the C Runtime Library
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS}$<$<CONFIG:Release>:;/MT>") # link with multithreaded, static version of the C Runtime Library
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS}$<$<CONFIG:Debug>:;/MTd>")  # link with debug, multithreaded, static version of the C Runtime Library
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS};/MP")                      # Compile in parallel
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS};/bigobj")                  # increase the maximum number of sections an object file can contain
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS};/EHs-;/EHc-")              # Disable exceptions
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS};/GR-")                     # Disable run-time type information
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};/Wall")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};/WX")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};/wd5045") # /Qspectre mitigation location warning, we don't use that flag
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};/wd4710") # It's not a problem if we don't inline
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};/wd4711") # It's not a problem if we don't inline
  
ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES "Clang" AND CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "MSVC")
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS}$<$<CONFIG:>:;/MT>")        # link with multithreaded, static version of the C Runtime Library
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS}$<$<CONFIG:Release>:;/MT>") # link with multithreaded, static version of the C Runtime Library
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS}$<$<CONFIG:Debug>:;/MTd>")  # link with debug, multithreaded, static version of the C Runtime Library
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS};/bigobj")                  # increase the maximum number of sections an object file can contain
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS};/MP")                      # Compile in parallel
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS};/EHs-;/EHc-")              # Disable exceptions
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS};/GR-")                     # Disable run-time type information
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wall")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wextra")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};/WX")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-c++98-compat")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-c++98-compat-pedantic")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-c++11-compat")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-pre-c++14-compat")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-c99-compat")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-unsafe-buffer-usage")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-shadow-field-in-constructor")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-unused-private-field")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-ctad-maybe-unsupported")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-switch-default")
  
ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  # clang-cl
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS};/bigobj") # increase the maximum number of sections an object file can contain
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS};-ffp-contract=off")
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS};-fno-exceptions")
  SET(HEMERA_OPTIONS "${HEMERA_OPTIONS};-fno-rtti")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-c++98-compat")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-c++98-compat-pedantic")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-c++11-compat")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-pre-c++14-compat")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-c99-compat")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-unsafe-buffer-usage")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-shadow-field-in-constructor")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-unused-private-field")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-ctad-maybe-unsupported")
  SET(HEMERA_WARNING_OPTIONS "${HEMERA_WARNING_OPTIONS};-Wno-switch-default")
  
ENDIF()

IF(MSVC)
  SET(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
ENDIF()

# Directories

IF(NOT DEFINED CMAKE_RUNTIME_OUTPUT_DIRECTORY)
  SET(HEMERA_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}" CACHE STRING "Path for runtime output files")
  SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${HEMERA_RUNTIME_OUTPUT_DIRECTORY})
ELSE()
  SET(HEMERA_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}" CACHE STRING "Path for runtime output files")
ENDIF()

IF(NOT DEFINED CMAKE_LIBRARY_OUTPUT_DIRECTORY)
  SET(HEMERA_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}" CACHE STRING "Path for library output files")
  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${HEMERA_LIBRARY_OUTPUT_DIRECTORY})
ELSE()
  SET(HEMERA_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}" CACHE STRING "Path for library output files")
ENDIF()

IF(NOT DEFINED CMAKE_ARCHIVE_OUTPUT_DIRECTORY)
  SET(HEMERA_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}" CACHE STRING "Path for archive output files")
  SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${HEMERA_ARCHIVE_OUTPUT_DIRECTORY})
ELSE()
  SET(HEMERA_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}" CACHE STRING "Path for archive output files")
ENDIF()

SET(RUNTIME_OUTPUT_DIRECTORY ${HEMERA_RUNTIME_OUTPUT_DIRECTORY})
SET(LIBRARY_OUTPUT_DIRECTORY ${HEMERA_LIBRARY_OUTPUT_DIRECTORY})
SET(ARCHIVE_OUTPUT_DIRECTORY ${HEMERA_ARCHIVE_OUTPUT_DIRECTORY})

SET(ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(THIRD_PARTY_DIR ${ROOT_DIR}/third-party)
SET(SOURCE_DIR ${ROOT_DIR}/src)
SET(INCLUDE_DIR ${ROOT_DIR}/include)
SET(HEMERA_MLIR_DIR ${ROOT_DIR}/mlir)
SET(TEST_DIR ${ROOT_DIR}/test)
SET(CONFIGURATION_BINARY_DIR ${HEMERA_RUNTIME_OUTPUT_DIRECTORY}/$<$<CONFIG:Debug>:Debug>$<$<CONFIG:Release>:Release>)

# Third party

SET(LLVM_DIR ${THIRD_PARTY_DIR}/llvm-project/llvm/cmake/modules)
FIND_PACKAGE(LLVM REQUIRED CONFIG)
MESSAGE(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
MESSAGE(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
LIST(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")

SET(LLVM_TARGETS_TO_BUILD "X86;AArch64;ARM" CACHE STRING "")
SET(LLVM_ENABLE_PROJECTS "clang;lld;mlir" CACHE STRING "")
SET(LLVM_ENABLE_RUNTIMES "compiler-rt;libc" CACHE STRING "")
SET(LLVM_BUILD_TESTS OFF CACHE BOOL "")
SET(LLVM_INCLUDE_TESTS OFF CACHE BOOL "")
SET(LLVM_INCLUDE_BENCHMARKS OFF CACHE BOOL "")
SET(LLVM_INCLUDE_EXAMPLES OFF CACHE BOOL "")
SET(LLVM_OPTIMIZED_TABLEGEN ON CACHE BOOL "")
SET(LLVM_RUNTIME_OUTPUT_INTDIR ${HEMERA_RUNTIME_OUTPUT_DIRECTORY})
SET(LLVM_LIBRARY_OUTPUT_INTDIR ${HEMERA_LIBRARY_OUTPUT_DIRECTORY})
ADD_SUBDIRECTORY(${THIRD_PARTY_DIR}/llvm-project/llvm)

SET(MLIR_DIR ${HEMERA_LIBRARY_OUTPUT_DIRECTORY}/lib/cmake/mlir)
FIND_PACKAGE(MLIR REQUIRED CONFIG)
MESSAGE(STATUS "Using MLIRConfig.cmake in: ${MLIR_DIR}")
SET(MLIR_BINARY_DIR ${CONFIGURATION_BINARY_DIR})
LIST(APPEND CMAKE_MODULE_PATH "${MLIR_CMAKE_DIR}")
SET(MLIR_INCLUDE_DIR ${THIRD_PARTY_DIR}/llvm-project/mlir/include)
SET(TABLEGEN_INCLUDES -I${MLIR_INCLUDE_DIR})
LIST(APPEND MLIR_TABLEGEN_FLAGS "-I${MLIR_INCLUDE_DIR}")

INCLUDE_DIRECTORIES(SYSTEM PRIVATE
  ${LLVM_INCLUDE_DIRS}
  ${THIRD_PARTY_DIR}/llvm-project/llvm/include
  $<BUILD_INTERFACE:${HEMERA_LIBRARY_OUTPUT_DIRECTORY}/third-party/llvm-project/llvm/include>
  ${MLIR_INCLUDE_DIRS}
  ${THIRD_PARTY_DIR}/llvm-project/mlir/include
  $<BUILD_INTERFACE:${HEMERA_LIBRARY_OUTPUT_DIRECTORY}/mlir/include>
)

IF(MSVC)
  # Intellisense doesn't play well with the clang-cl SYSTEM PRIVATE includes
  LIST(APPEND CMAKE_VS_SDK_INCLUDE_DIRECTORIES ${HEMERA_LIBRARY_OUTPUT_DIRECTORY}/mlir/include)
  LIST(APPEND CMAKE_VS_SDK_INCLUDE_DIRECTORIES ${HEMERA_LIBRARY_OUTPUT_DIRECTORY}/third-party/llvm-project/llvm/include)
  LIST(APPEND CMAKE_VS_SDK_INCLUDE_DIRECTORIES ${THIRD_PARTY_DIR}/llvm-project/mlir/include)
  LIST(APPEND CMAKE_VS_SDK_INCLUDE_DIRECTORIES ${THIRD_PARTY_DIR}/llvm-project/llvm/include)
ENDIF()

# For Windows: Prevent overriding the parent project's compiler/linker settings
SET(gtest_force_shared_crt OFF CACHE BOOL "" FORCE)
SET(BUILD_GMOCK OFF)
SET(INSTALL_GTEST OFF)
ADD_SUBDIRECTORY(${THIRD_PARTY_DIR}/googletest)
INCLUDE(GoogleTest)

# Project code
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(${HEMERA_MLIR_DIR})

SET_PROPERTY(DIRECTORY ${ROOT_DIR} PROPERTY VS_STARTUP_PROJECT Hemera)
SET_PROPERTY(TARGET Hemera PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${CONFIGURATION_BINARY_DIR})
