# MLIR dialect source

CMAKE_MINIMUM_REQUIRED(VERSION 3.20.0...4.3.3)

IF(POLICY CMP0068)
  CMAKE_POLICY(SET CMP0068 NEW)
  SET(CMAKE_BUILD_WITH_INSTALL_NAME_DIR ON)
ENDIF()

IF(POLICY CMP0075)
  CMAKE_POLICY(SET CMP0075 NEW)
ENDIF()

IF(POLICY CMP0077)
  CMAKE_POLICY(SET CMP0077 NEW)
ENDIF()

PROJECT(hmir-dialect LANGUAGES CXX C)

SET(MLIR_DIR ${HEMERA_LIBRARY_OUTPUT_DIRECTORY}/lib/cmake/mlir)
FIND_PACKAGE(MLIR REQUIRED CONFIG)

MESSAGE(STATUS "Using MLIRConfig.cmake in: ${MLIR_DIR}")
MESSAGE(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")

SET(LLVM_RUNTIME_OUTPUT_INTDIR ${HEMERA_RUNTIME_OUTPUT_DIRECTORY})
SET(LLVM_LIBRARY_OUTPUT_INTDIR ${HEMERA_LIBRARY_OUTPUT_DIRECTORY})
SET(MLIR_BINARY_DIR ${CONFIGURATION_BINARY_DIR})

LIST(APPEND CMAKE_MODULE_PATH "${MLIR_CMAKE_DIR}")
SET(MLIR_INCLUDE_DIR ${THIRD_PARTY_DIR}/llvm-project/mlir/include)
SET(TABLEGEN_INCLUDES -I${MLIR_INCLUDE_DIR})
LIST(APPEND MLIR_TABLEGEN_FLAGS "-I${MLIR_INCLUDE_DIR}")

ADD_SUBDIRECTORY(include/hmir)
ADD_SUBDIRECTORY(lib/hmir)
